--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">$9.99</h5>
+                                                <h5 class="deal-cat">₡5.000</h5>
                                             </div>
                                             <h3 class="deals-tit">MINI PIPA</h3>
                                             <div class="deal-store-sec">
@@ -596,7 +596,7 @@
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">$21.99</h5>
+                                                <h5 class="deal-cat">₡10.000</h5>
                                             </div>
                                             <h3 class="deals-tit">Tana - Mini báscula digital Fuzion</h3>
                                             <div class="deal-store-sec">
@@ -609,7 +609,7 @@
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">$9.99</h5>
+                                                <h5 class="deal-cat">₡4.500</h5>
                                             </div>
                                             <h3 class="deals-tit">Mini Enroladora OCB</h3>
                                             <div class="deal-store-sec">
