--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -787,10 +787,10 @@
                                                 <div class="et_pb_blurb_content">
                                                     <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyload" data-src="https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 300w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 150w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 768w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 980w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 300w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 150w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 768w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/pipa-de-minion.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/pipa-de-helado.png 980w, https://www.herbalist.ml/img/products/pipas/pipa-de-helado.png 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
                                                     <div class="et_pb_blurb_container">
-                                                        <h2 class="et_pb_module_header"><span>PIPA DE MINION - 4IN</span></h2>
+                                                        <h2 class="et_pb_module_header"><span>PIPA DE MINION</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>₡14.20</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡11.000</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
@@ -814,7 +814,7 @@
                                                     <h2 class="et_pb_module_header"><span>Silicone Ice Cream Pipe</span></h2>
 
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>₡19.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡10.500</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
