--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -460,6 +460,110 @@
                                     </div>
 
 
+                                    <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_0  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                                <div class="et_pb_blurb_content">
+                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyload" data-src="https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg" alt="" srcset="https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1920w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/pink-mod-bong-7in-28506144505935_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
+                                                    <div class="et_pb_blurb_container">
+                                                        <h2 class="et_pb_module_header"><span>Bong Mod Rosa</span></h2>
+
+                                                        <div class="et_pb_blurb_description">
+                                                            <p class="custom-btn-price"><strong>$45.20</strong></p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_1  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                                <div class="et_pb_blurb_content">
+                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828 lazyload" data-src="https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1920w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg" alt="" srcset="https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1920w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/mod-bong-7in-28506150469711_400x.jpg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828" data-eio="l" /></noscript></span></div>
+                                                    <div class="et_pb_blurb_container">
+                                                        <h2 class="et_pb_module_header"><span>Bong Mod Verde</span></h2>
+
+                                                        <div class="et_pb_blurb_description">
+                                                            <p class="custom-btn-price"><strong>$45.20</strong></p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+
+
+                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_2  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                                <div class="et_pb_blurb_content">
+                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827 lazyload" data-src="https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1920w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg" alt="" srcset="https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1920w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1024w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1536w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1080w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 1280w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 980w, https://www.herbalist.ml/img/products/bongs/multi-colored-perc-bong-9in-15649005338703_400x.jpg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827" data-eio="l" /></noscript></span></div>
+                                                    <div class="et_pb_blurb_container">
+                                                        <h2 class="et_pb_module_header"><span>Bong Perc multicolor</span></h2>
+                                                        <div class="et_pb_blurb_description">
+                                                            <p class="custom-btn-price"><strong>$49.99</strong></p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
+                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_3  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+                                                <div class="et_pb_blurb_content">
+                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="960" height="960" src="https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783 lazyload" data-src="https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 960w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 480w" data-sizes="auto" /><noscript><img width="960" height="960" src="https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg" alt="" srcset="https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 960w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 300w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 150w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 768w, https://www.herbalist.ml/img/products/bongs/soft-serve-bong-28844273893455_400x.jpg 480w" sizes="(max-width: 960px) 100vw, 960px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783" data-eio="l" /></noscript></span></div>
+                                                    <div class="et_pb_blurb_container">
+                                                        <h2 class="et_pb_module_header"><span>Ice cream Bong</span></h2>
+                                                        <div class="et_pb_blurb_description">
+                                                            <p class="custom-btn-price"><strong>$59.99</strong> <span class="cs-sold-out">agotado</span> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
 
                                     <div class="et_pb_row et_pb_row_2">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
@@ -562,7 +666,6 @@
 
 
                                     </div>
-
 
                                     <div class="et_pb_row et_pb_row_6">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_15  et_pb_css_mix_blend_mode_passthrough">
@@ -775,8 +878,6 @@
 
                                     </div>
 
-
-
                                     <div class="et_pb_row et_pb_row_2">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 
@@ -873,9 +974,6 @@
                                     </div>
 
                                     </div>
-
-
-
 
                                     <div class="et_pb_row et_pb_row_3">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
@@ -1159,8 +1257,6 @@
 
 
                                     </div>
-
-
 
 
 
