--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -473,7 +473,7 @@
                                                         <h2 class="et_pb_module_header"><span>Eyce Rosa Glass Pipe</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$19.900</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡19.900</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
@@ -499,7 +499,7 @@
                                                         <h2 class="et_pb_module_header"><span>Bong Mod Verde</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$45.20</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡45.20</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
@@ -527,7 +527,7 @@
                                                     <div class="et_pb_blurb_container">
                                                         <h2 class="et_pb_module_header"><span>Bong Perc multicolor</span></h2>
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$49.99</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡49.99</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
@@ -549,7 +549,7 @@
                                                     <div class="et_pb_blurb_container">
                                                         <h2 class="et_pb_module_header"><span>Ice cream Bong</span></h2>
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$59.99</strong> <span class="cs-sold-out">agotado</span> </p>
+                                                            <p class="custom-btn-price"><strong>₡59.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
