--- a/index.html
+++ b/index.html
@@ -401,13 +401,11 @@
                                     <div class="et_pb_row et_pb_row_0 et_pb_row_fullwidth">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
-
                                             <div class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_left et_pb_bg_layout_light">
-
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg?v2');">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg');">
                                                             <div class="slider-content et_pb_row">
 
                                                                 <h2 class="custom-slider-text">Entregando salud y felicidad™</h2>
