--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -171,28 +171,28 @@
                                             </div>
                                         </div>
 
-                                            <!-- MENU DESKTOP -->
-                                            <ul id="mega-menu-primary-menu" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-139" id="mega-menu-item-139">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/bongs/" tabindex="0">Bongs</a>
-                                                </li>
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1859" id="mega-menu-item-1859">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/pipas/" tabindex="0">Pipas</a>
-                                                </li>
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/vapes/" tabindex="0">Vapes</a>
-                                                </li>
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
-                                                </li>
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cultivo/" tabindex="0">Cultivo</a>
-                                                </li>
-                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                    <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
-                                                </li>
-                                            </ul>
-                                            <!-- MENU DESKTOP -->
+                                        <!-- MENU DESKTOP -->
+                                        <ul id="mega-menu-primary-menu" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1859" id="mega-menu-item-1859">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/pipas/" tabindex="0">Pipas</a>
+                                            </li>
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-139" id="mega-menu-item-139">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/bongs/" tabindex="0">Bongs</a>
+                                            </li>
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/vapes/" tabindex="0">Vapes</a>
+                                            </li>
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
+                                            </li>
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
+                                            </li>
+                                            <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cultivo/" tabindex="0">Cultivo</a>
+                                            </li>
+                                        </ul>
+                                        <!-- MENU DESKTOP -->
 
                                     </div>
                                 </div>
@@ -205,7 +205,7 @@
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="smoke shop logo" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
                             </div>
@@ -292,16 +292,12 @@
 
                 <div class="et_pb_section et_pb_section_7_tb_header slide-in-menu-container header-bar et_section_regular" >
 
-                     <!-- MENU MOBILE -->
-                     <div class="et_pb_row et_pb_row_4_tb_header">
+                    <!-- MENU MOBILE -->
+                    <div class="et_pb_row et_pb_row_4_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_8_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
-                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cbd/">CBD</a>
-                            </div>
-
-                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cultivo/">Cultivo</a>
+                            <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
+                                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas/">Pipas</a>
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
@@ -309,11 +305,19 @@
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas/">Pipas</a>
+                                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/vapes/">Vapes</a>
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/vapes/">Vapes</a>
+                                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/picadoras/">Grinders</a>
+                            </div>
+
+                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
+                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cbd/">CBD</a>
+                            </div>
+
+                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
+                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cultivo/">Cultivo</a>
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
@@ -336,9 +340,9 @@
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
                                 <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
-                                    <span class="et_pb_image_wrap ">
-                                 <i class="fab fa-facebook sap-icon" style="color: black;"></i>
-                                </span>
+                                <span class="et_pb_image_wrap ">
+                             <i class="fab fa-facebook sap-icon" style="color: black;"></i>
+                            </span>
                                 </a>
                             </div>
 
@@ -350,8 +354,6 @@
                             -->
 
 
-
-
                         </div>
                     </div>
                     <!-- MENU MOBILE -->
@@ -361,8 +363,6 @@
             </div>
 
         </header>
-
-
 
         <div id="et-main-area">
 
