--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -817,7 +817,7 @@
 
                                     </div>
 
-                                    <div class="et_pb_row et_pb_row_2">
+                                    <!--<div class="et_pb_row et_pb_row_2">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 
 
@@ -912,7 +912,7 @@
                                         </div>
                                     </div>
 
-                                    </div>
+                                    </div>-->
 
                                     <div class="et_pb_row et_pb_row_3">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
