--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -412,7 +412,7 @@
                                                         <h2 class="et_pb_module_header"><span>Herbalist Pipa</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>₡6.000</strong> <span class="cs-sold-out">agotado</span></p>
+                                                            <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                     <span class="text">Comprar</span>
