--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -92,17 +92,21 @@
     <link rel="stylesheet" id="et-core-unified-2-cached-inline-styles" href="https://www.herbalist.ml/css/products/et-core-unified-2.min.css?v2">
 
     <style type="text/css">/** Mega Menu CSS: fs **/</style>
-    <style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style><style id="divi-overlays-styles"></style></head>
+    <style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style><style id="divi-overlays-styles"></style>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EBN618D1GP"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBN618D1GP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'G-EBN618D1GP');
-</script>
+        gtag('config', 'G-EBN618D1GP');
+    </script>
+
+</head>
+
+
 
 <body class="home page-template-default page page-id-2 et-tb-has-template et-tb-has-header et-tb-has-footer mega-menu-max-mega-menu-1 mega-menu-secondary-menu mega-menu-primary-menu et_pb_button_helper_class et_cover_background et_pb_gutter windows et_pb_gutters3 et_pb_pagebuilder_layout et_no_sidebar et_divi_theme et-db">
 
