--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -451,7 +451,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Los vaporizadores son una de las formas más prácticas, eficientes y populares de disfrutar de tu hierba seca y wax, ¡echa un vistazo a nuestra colección completa de vaporizadores!
+                                                        Sherlock Holmes, Gandalf y Einstein. Si deseas unirte a los grandes de la historia que usan pipas, tenemos una variedad de pipas de vidrio con diseño único a buen precio.
                                                     </h4>
                                                 </div>
                                             </div>
