--- a/shop/arte/index.html
+++ b/shop/arte/index.html
@@ -1321,7 +1321,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 <script>
     jQuery(document).ready(function() {
         jQuery(".cus-animate-section").show("slow");
-        // jQuery(".cus-animate-section").addClass("cus-animation");
+        /// jQuery(".cus-animate-section").addClass("cus-animation");
     });
 </script>
 
