--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -497,7 +497,7 @@
                                                     <h2 class="et_pb_module_header"><span>EYCE PIPA RASTA DE SILICON</span></h2>
 
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$149.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡15.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
@@ -520,7 +520,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>THE FISH SCALE PIPE</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$44.95</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
@@ -542,7 +542,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>2 EN 1 SILICONE PIPE</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$54.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡9.500</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
@@ -567,10 +567,10 @@
                                                 <div class="et_pb_blurb_content">
                                                     <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyload" data-src="https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 980w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 980w, https://www.herbalist.ml/img/products/pipas/3-pipe.jpeg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
                                                     <div class="et_pb_blurb_container">
-                                                        <h2 class="et_pb_module_header"><span>Little Dipper Dab Straw Vaporizer - Yellow</span></h2>
+                                                        <h2 class="et_pb_module_header"><span>PIPAS DE VIDRIO MULTICOLOR</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$49.99</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡7.500</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
@@ -591,10 +591,10 @@
                                             <div class="et_pb_blurb_content">
                                                 <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828 lazyload" data-src="https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 980w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 980w, https://www.herbalist.ml/img/products/pipas/colored-spoon-pipe.jpeg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828" data-eio="l" /></noscript></span></div>
                                                 <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>Yocan Hive 2.0 Vaporizer - Red</span></h2>
+                                                    <h2 class="et_pb_module_header"><span>MULTI COLOR SPOON GLASS PIPE</span></h2>
 
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$44.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
@@ -615,9 +615,9 @@
                                             <div class="et_pb_blurb_content">
                                                 <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827 lazyload" data-src="https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 980w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 300w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 150w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 768w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 980w, https://www.herbalist.ml/img/products/pipas/glass-spoon-blue-pipe.jpeg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827" data-eio="l" /></noscript></span></div>
                                                 <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>Yocan Uni Box Mod Vaporizer - Matte Gold</span></h2>
+                                                    <h2 class="et_pb_module_header"><span>BLUE SPOON GLASS PIPE</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$54.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡6.900</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                 <span class="text">Comprar</span>
@@ -641,9 +641,9 @@
                                                 <div class="et_pb_blurb_content">
                                                     <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="960" height="960" src="https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783 lazyload" data-src="https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 960w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 300w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 150w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 768w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 480w" data-sizes="auto" /><noscript><img width="960" height="960" src="https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 960w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 300w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 150w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 768w, https://www.herbalist.ml/img/products/pipas/1648370236036.jpeg 480w" sizes="(max-width: 960px) 100vw, 960px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783" data-eio="l" /></noscript></span></div>
                                                     <div class="et_pb_blurb_container">
-                                                        <h2 class="et_pb_module_header"><span>Pulsar APX 2 Vaporizer - Tie Die</span></h2>
+                                                        <h2 class="et_pb_module_header"><span>ORANGE MIX GLASS PIPE SPOON</span></h2>
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$69.99</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡9.800</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50660170413/?text=">
                                                                     <span class="text">Comprar</span>
