--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Picadoras de weed | Herbalist Costa Rica</title>
+    <title>Picadoras | Herbalist Costa Rica</title>
     <meta name="description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Picadoras de weed | Herbalist Costa Rica" />
+    <meta property="og:title" content="Picadoras | Herbalist Costa Rica" />
     <meta property="og:description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
