--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Vape Shop | Vaporizadores | Herbalist Costa Rica</title>
+    <title>Vapes | Herbalist Costa Rica</title>
     <meta name="description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/vapes/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vape Shop | Vaporizadores | Herbalist Costa Rica" />
+    <meta property="og:title" content="Vapes | Herbalist Costa Rica" />
     <meta property="og:description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/vapes/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
