--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_5  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <p>Esta smoke shop fue creada especialmente para Heavy Smokers:<br><br> </p>
+                                                <p>Especialmente para Heavy Smokers:<br><br> </p>
                                             </div>
 
 
