--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Pipas, bongs, cbd y accesorios | Herbalist Costa Rica</title>
+    <title>Pipas, bongs, CBD y accesorios | Herbalist Costa Rica</title>
     <meta name="description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Pipas, bongs, cbd y accesorios | Herbalist Costa Rica" />
+    <meta property="og:title" content="Pipas, bongs, CBD y accesorios | Herbalist Costa Rica" />
     <meta property="og:description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -549,7 +549,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_5  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <p>Productos especialmente para Heavy Smokers<br><br> </p>
+                                                <p>Accesorios 420 especialmente para Heavy Smokers<br><br> </p>
                                             </div>
 
 
