--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Pipas, bongs, cbd y accesorios para fumar</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Pipas, bongs, CBD y accesorios para fumar</h1></div>
                                             </div>
                                         </div>
                                     </div>
