--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                                    </div>
 
                                                        <div class="owl-slider item">
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/pipes.jpg);">
+                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2>Todo lo que necesitas para las 4:20</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
