--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Bongs, pipas, CBD y accesorios | Herbalist Costa Rica</title>
+    <title>Herbalist Smoke Shop: Bongs, pipas, CBD y más accesorios para fumar</title>
     <meta name="description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bongs, pipas, CBD y accesorios | Herbalist Costa Rica" />
+    <meta property="og:title" content="Herbalist Smoke Shop: Bongs, pipas, CBD y más accesorios para fumar" />
     <meta property="og:description" content="Smoke shop #1 en Costa Rica con lo mejor en pipas, bongs, cbd, vaporizadores y otros accesorios para fumar" />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -466,7 +466,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Bongs, pipas, CBD, accesorios para fumar y mucho más</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Herbalist Smoke Shop: Bongs, pipas, CBD y más accesorios para fumar</h1></div>
                                             </div>
                                         </div>
                                     </div>
