--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                     <div class="et_pb_row et_pb_row_4">
                                     <div class="et_pb_column et_pb_column_4_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                         <div class="et_pb_module et_pb_text et_pb_text_8  et_pb_text_align_left et_pb_bg_layout_light">
-                                            <div class="et_pb_text_inner"><h2>Explora la Smoke Shop</h2></div>
+                                            <div class="et_pb_text_inner"><h2>Smoke Shop</h2></div>
                                         </div>
                                     </div>
                                 </div>
