--- a/shop/index.html
+++ b/shop/index.html
@@ -436,7 +436,7 @@ heateor_sss_vertical_sharing{
                                                             <div class="slider-content et_pb_row">
                                                                 <h2>Responsables del equilibrio y la armonía en nuestro cuerpo</h2>
 
-                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="#shop-herbalist">
                                                                     <span class="text">Smoke Shop</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -487,7 +487,7 @@ heateor_sss_vertical_sharing{
                                     </div>
 
 
-                                    <div class="et_pb_row et_pb_row_2">
+                                    <div class="et_pb_row et_pb_row_2" id="shop-herbalist">
 
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
@@ -496,7 +496,9 @@ heateor_sss_vertical_sharing{
                                             <div class="et_pb_module et_pb_text et_pb_text_2  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                                <div class="et_pb_text_inner"><div class="key-shop-list"><div class="shop-module">
+                                                <div class="et_pb_text_inner">
+                                                    <div class="key-shop-list">
+                                                        <div class="shop-module">
                                                     <div class="shop-content">
                                                         <h2>Pipas</h2>
                                                         <div class="shop-image">
