--- a/shop/index.html
+++ b/shop/index.html
@@ -437,7 +437,7 @@ heateor_sss_vertical_sharing{
                                                                 <h2>Por el equilibrio y la armonía en nuestro cuerpo</h2>
 
                                                                 <a class="more btn btn--black" target="" href="#shop-herbalist">
-                                                                    <span class="text">Smoke Shop</span>
+                                                                    <span class="text">Shop</span>
                                                                     <span class="bg"></span>
                                                                 </a>
 
