--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                                                 <h2 class="custom-slider-text">Entregando salud y felicidad™</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                      <span class="text">Smoke Shop</span>
+                                                                      <span class="text">Shop</span>
                                                                    <span class="bg"></span>
                                                                </a>
 
